--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.26.1",
+    "mobx": "^6.5.0",
+    "mobx-react-lite": "^3.3.0",
     "next": "12.1.0",
+    "node-sass": "^7.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
