--- a/package.json
+++ b/package.json
@@ -9,15 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@trendyol-js/react-carousel": "^2.0.1",
     "axios": "^0.26.1",
+    "bootstrap": "^5.1.3",
     "mobx": "^6.5.0",
     "mobx-react-lite": "^3.3.0",
     "next": "12.1.0",
     "node-sass": "^7.0.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react": "^17.0.2",
+    "react-bootstrap": "^2.2.1",
+    "react-dom": "^17.0.2",
+    "react-modal": "^3.14.4"
   },
   "devDependencies": {
+    "@svgr/webpack": "^6.2.1",
     "eslint": "8.11.0",
     "eslint-config-next": "12.1.0"
   }
