--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "mobx-react-lite": "^3.3.0",
     "next": "12.1.0",
     "node-sass": "^7.0.1",
+    "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.1",
     "react-dom": "^17.0.2",
+    "react-elastic-carousel": "^0.11.5",
     "react-modal": "^3.14.4"
   },
   "devDependencies": {
