--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mobx-react-lite": "^3.3.0",
     "next": "12.1.0",
     "node-sass": "^7.0.1",
+    "noty": "^3.2.0-beta-deprecated",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.1",
