--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
     "@trendyol-js/react-carousel": "^2.0.1",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
+    "i18next": "^21.8.10",
+    "i18next-browser-languagedetector": "^6.1.4",
+    "i18next-http-backend": "^1.4.1",
     "mobx": "^6.5.0",
     "mobx-react-lite": "^3.3.0",
     "next": "12.1.0",
+    "next-i18next": "^11.0.0",
     "node-sass": "^7.0.1",
     "noty": "^3.2.0-beta-deprecated",
     "prop-types": "^15.8.1",
@@ -23,6 +27,7 @@
     "react-content-loader": "^6.2.0",
     "react-dom": "^17.0.2",
     "react-elastic-carousel": "^0.11.5",
+    "react-i18next": "^11.17.2",
     "react-modal": "^3.14.4"
   },
   "devDependencies": {
