--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^17.0.2",
     "react-elastic-carousel": "^0.11.5",
     "react-i18next": "^11.17.2",
+    "react-icons": "^4.4.0",
     "react-modal": "^3.14.4"
   },
   "devDependencies": {
