--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "noty": "^3.2.0-beta-deprecated",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
+    "react-awesome-slider": "^4.1.0",
     "react-bootstrap": "^2.2.1",
     "react-content-loader": "^6.2.0",
     "react-dom": "^17.0.2",
