--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@trendyol-js/react-carousel": "^2.0.1",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
+    "cookies-next": "^2.1.1",
     "i18next": "^21.8.10",
     "i18next-browser-languagedetector": "^6.1.4",
     "i18next-http-backend": "^1.4.1",
