--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "cookies-next": "^2.1.1",
+    "file-loader": "^6.2.0",
     "i18next": "^21.8.10",
     "i18next-browser-languagedetector": "^6.1.4",
     "i18next-http-backend": "^1.4.1",
@@ -32,7 +33,9 @@
     "react-elastic-carousel": "^0.11.5",
     "react-i18next": "^11.17.2",
     "react-icons": "^4.4.0",
+    "react-image-zoom": "^1.3.1",
     "react-modal": "^3.14.4",
+    "url-loader": "^4.1.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
