--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-image-zoom": "^1.3.1",
     "react-modal": "^3.14.4",
     "url-loader": "^4.1.1",
+    "use-debounce": "^8.0.4",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
