--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-image-zoom": "^1.3.1",
     "react-modal": "^3.14.4",
     "sass": "^1.55.0",
+    "styled-components": "^5.3.6",
     "url-loader": "^4.1.1",
     "use-debounce": "^8.0.4",
     "uuid": "^9.0.0"
