--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "cookies-next": "^2.1.1",
+    "express": "^4.18.2",
     "file-loader": "^6.2.0",
     "i18next": "^21.8.10",
     "i18next-browser-languagedetector": "^6.1.4",
     "i18next-http-backend": "^1.4.1",
+    "lru-cache": "^7.14.0",
     "mobx": "^6.5.0",
     "mobx-react-lite": "^3.3.0",
     "next": "12.1.0",
